# enzo

./: .dockerignore  .gitignore  AttributeHandle_8h_source.html  Attribute_8h_source.html  CMakeLists.txt  Context_8h_source.html  Default_8h_source.html  Doxyfile  FloatType_8h_source.html  GOP__test_8h_source.html  GOP__transform_8h_source.html  GeometryConnection_8h_source.html  GeometryOpDef_8h_source.html  GeometryOperator_8h_source.html  Geometry_8h_source.html  NetworkManager_8h_source.html  OpInfo_8h_source.html  OperatorTable_8h_source.html  Parameter_8h_source.html  Primitive_8h_source.html  README.md  Template_8h_source.html  Type_8h_source.html  Types_8h_source.html  annotated.html  build.sh  classGOP__test-members.html  classGOP__test.html  classGOP__transform-members.html  classGOP__transform.html  classenzo_1_1Primitive-members.html  classenzo_1_1Primitive.html  classenzo_1_1ga_1_1Attribute-members.html  classenzo_1_1ga_1_1Attribute.html  classenzo_1_1ga_1_1AttributeHandle-members.html  classenzo_1_1ga_1_1AttributeHandle.html  classenzo_1_1geo_1_1Geometry-members.html  classenzo_1_1geo_1_1Geometry.html  classenzo_1_1nt_1_1GeometryConnection-members.html  classenzo_1_1nt_1_1GeometryConnection.html  (+29 more)
.github/workflows/: doxygen.yml
cmake/: CPackProjectConfig.cmake
docker/builds/: Dockerfile.rocky9  build.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  searchdata.js
src/: main.cpp
src/Engine/: Types.h
src/Engine/Network/: NetworkManager.cpp  NetworkManager.h
src/Engine/Operator/: Attribute.cpp  Attribute.h  AttributeHandle.h  Context.cpp  Context.h  GOP_test.cpp  GOP_test.h  GOP_transform.cpp  GOP_transform.h  Geometry.cpp  Geometry.h  GeometryConnection.cpp  GeometryConnection.h  GeometryOpDef.cpp  GeometryOpDef.h  GeometryOperator.cpp  GeometryOperator.h  OpInfo.h  OperatorTable.cpp  OperatorTable.h  Primitive.cpp  Primitive.h
src/Engine/Parameter/: Default.cpp  Default.h  FloatParm.cpp  FloatParm.h  FloatType.cpp  FloatType.h  Parameter.cpp  Parameter.h  PrmName.cpp  PrmName.h  Range.cpp  Range.h  Template.cpp  Template.h  Type.h
src/Gui/: Interface.cpp  Interface.h  main.cpp
src/Gui/GeometrySpreadsheetPanel/: GeometrySpreadsheetMenuBar.cpp  GeometrySpreadsheetMenuBar.h  GeometrySpreadsheetModel.cpp  GeometrySpreadsheetModel.h  GeometrySpreadsheetPanel.cpp  GeometrySpreadsheetPanel.h
src/Gui/Network/: DisplayFlagButton.cpp  FloatingEdgeGraphic.cpp  FloatingEdgeGraphic.h  Network.cpp  Network.h  NetworkGraphicsScene.cpp  NetworkGraphicsScene.h  NetworkGraphicsView.cpp  NetworkGraphicsView.h  NetworkPanel.cpp  NetworkPanel.h  NodeEdgeGraphic.cpp  NodeEdgeGraphic.h  NodeGraphic.cpp  NodeGraphic.h  NodeIconGraphic.cpp  SocketGraphic.cpp  SocketGraphic.h  TabMenu.cpp  TabMenu.h
src/Gui/Parameters/: AbstractFormParm.cpp  AbstractFormParm.h  AbstractSliderParm.cpp  AbstractSliderParm.h  BoolSwitchParm.cpp  BoolSwitchParm.h  FloatParm.cpp  FloatParm.h  FloatSliderParm.cpp  FloatSliderParm.h  FormParm.cpp  FormParm.h  IntSliderParm.cpp  IntSliderParm.h  StringParm.cpp  StringParm.h
src/Gui/ParametersPanel/: ParametersPanel.cpp  ParametersPanel.h
src/Gui/UtilWidgets/: Splitter.cpp
src/Gui/Viewport/: GLCamera.cpp  GLCamera.h  GLGrid.cpp  GLGrid.h  GLMesh.cpp  GLMesh.h  GLPoints.cpp  GLPoints.h  Viewport.cpp  Viewport.h  ViewportGLWidget.cpp  ViewportGLWidget.h
src/OpDefs/: CMakeLists.txt  GopGeometryImport.cpp  GopGeometryImport.h  GopGrid.cpp  GopGrid.h  GopHouse.cpp  GopHouse.h  GopOceanSurface.cpp  GopOceanSurface.h  GopSineWave.cpp  GopSineWave.h  GopTestCube.cpp  GopTestCube.h  GopTransform.cpp  GopTransform.hpp  RegisterPlugin.cpp  main.cpp
src/gui/: Interface.cpp  Interface.h  NetworkView.cpp  NetworkView.h  main.cpp
src/gui/UtilWidgets/: Splitter.cpp  Splitter.h
src/gui/network/: DisplayFlagButton.cpp  DisplayFlagButton.h  FloatingEdgeGraphic.cpp  FloatingEdgeGraphic.h  Network.cpp  Network.h  NetworkGraphicsScene.cpp  NetworkGraphicsScene.h  NetworkGraphicsView.cpp  NetworkGraphicsView.h  NetworkView.cpp  NetworkView.h  NodeEdgeGraphic.cpp  NodeEdgeGraphic.h  NodeGraphic.cpp  NodeGraphic.h  NodeIconGraphic.cpp  NodeIconGraphic.h  SocketGraphic.cpp  SocketGraphic.h
src/gui/viewport/: GLCamera.cpp  GLCamera.h  GLGrid.cpp  GLGrid.h  GLMesh.cpp  GLMesh.h  OpenGLWidget.h  Viewport.cpp  Viewport.h  ViewportGLWidget.cpp  ViewportGLWidget.h
static/: resources.qrc
tests/: Benchmarks.cpp  NetworkTests.cpp  OperatorTests.cpp  main-tests.cpp
